# brainfk_rs

./: Cargo.toml  README.md
brainfk/: example_code.brainfuck
src/: data.rs  main.rs
