[package]
edition = "2021"
name = "willy_wonka"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = {git = "https://github.com/iced-rs/iced.git", rev = "refs/tags/text-editor", features = ["debug"]}
tokio = {version = "1", features = ["fs"]}
